# handbook_copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py  routes.py
app/generation/: __init__.py  factory.py  ollama_client.py  openai_client.py  prompts.py
app/ingestion/: __init__.py  chunker.py  pdf_parser.py  pipeline.py
app/models/: registry.py  schemas.py
app/retrieval/: __init__.py  retriever.py  vector_store.py
data/: colleges.json  invite_codes.json
frontend/: package-lock.json  package.json  streamlit_app.py
frontend/app/: ThemeRegistry.tsx  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Navbar.tsx
frontend/lib/: api.ts  types.ts
frontend/pages/: 1_🏫_Register_College.py  2_💬_Student_Chat.py
frontend/public/: manifest.json
frontend/theme/: theme.ts
scripts/: ingest.py  pull_models.sh
tests/: test_chunker.py  test_generation.py  test_retriever.py
