[project]
name = "handbook-copilot"
version = "0.1.0"
description = "RAG-based university handbook copilot with vector search and cited answers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "qdrant-client>=1.12.0",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",
    "python-multipart>=0.0.18",
    "streamlit>=1.40.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
